--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 EMAIL_USE_TLS = True
 EMAIL_HOST = 'smtp.gmail.com'
 EMAIL_PORT = 587
-EMAIL_HOST_USER = 'adika19ian@gmail.com'
-EMAIL_HOST_PASSWORD = 'Ianito007'
+EMAIL_HOST_USER = 'ianitofranky@gmail.com'
+EMAIL_HOST_PASSWORD = '37551955'
