--- a/.env
+++ b/.env
@@ -1,3 +1,21 @@
+SECRET_KEY='pq^8q)w6($yk*rskgbs-#qz41bl6k05^q)3ou+i*-n-^)(z@rm'
+DEBUG=True 
+DB_NAME='awwwards'
+DB_USER='ian'
+DB_PASSWORD='ianito'
+DB_HOST='127.0.0.1'
+MODE='dev'
+ALLOWED_HOSTS='.localhost', '.herokuapp.com', '.127.0.0.1'
+DISABLE_COLLECTSTATIC=1
+
+
+
+
+
+
+
+
+
 EMAIL_USE_TLS = True
 EMAIL_HOST = 'smtp.gmail.com'
 EMAIL_PORT = 587
